Add endpoints to view single and multiple products
